fix: fix style dark mode for mobile

--- a/js30-image-gallery/style.css
+++ b/js30-image-gallery/style.css
@@ -193,6 +193,10 @@
         top: .2rem;
         right: 1rem;
     }
+    .dark_mode {
+        width: 1.8rem;
+        height: 1.8rem;
+    }
 }
 
 /* Footer */
